# agonaut

./: .env.example  .gitignore  ARCHITECTURE-V2.md  ARCHITECTURE.md  AUDIT-PROCESS.md  AUDIT_ROUND_7.md  BUILD-PLAN-V2.md  BUILD-PLAN.md  CHANGELOG.md  CONCEPT.md  DECISIONS.md  DEPENDENCY-MAP.md  DEPLOYMENTS.md  DEPLOYMENTS_V2.md  INVARIANTS.md  LAUNCH_CHECKLIST.md  POST_DRYRUN_CHECKLIST.md  README.md  SECURITY_AUDIT_2026-03-22.md  V2_IMPLEMENTATION_ROADMAP.md  deployments.json  docker-compose.yml  package-lock.json  package.json
abis/: ArenaRegistry.json  BountyFactory.json  BountyRound.json  ScoringOracle.json
archive/: ScorerRegistry.t.sol
backend/: .env.example  Dockerfile  config.py  main.py  requirements.txt
compliance/: README.md  kyc_state.json  kyc_tiers.py  sanctioned_wallets.json  sanctions.py  screening_log.jsonl
contracts/: .gitignore  foundry.toml
deploy/: e2e-test.sh  phala-compose.yml  setup-api.sh  setup-scoring-service.sh  sync-backend.sh  sync-scoring.sh
deprecated-partisia/: Cargo.toml
deprecated-partisia/src/: contract.rs  lib.rs  zk_compute.rs
deprecated-relayer/: README.md  relayer.py
docker/: Dockerfile.backend  Dockerfile.scoring  docker-compose.yml
docs/: V2_ZERO_KNOWLEDGE_ARCHITECTURE.md  audit-backend.md  audit-contracts.md  audit-frontend.md  audit-full-system.md  audit-round-5-systematic.md  audit-round-6.md  audit-round-6c.md  corporate-structure.md
frontend/: next.config.ts  package-lock.json  package.json  test_ecies_js.mjs
legal/: KYC_AML_PLAN.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
logo-concepts/: render.html
(+320 files in other folders)
